@@ -297,6 +297,45 @@ AT_CLEANUP
 
 # GnuCOBOL additional checks
 
+
+AT_SETUP([OCCURS INDEXED before KEY])
+AT_KEYWORDS([occurs])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       DATA  DIVISION.
+       WORKING-STORAGE SECTION.
+       01  TAB.
+           05  TAB-ENTRY1
+                  OCCURS 5 TIMES
+                  INDEXED BY IDX1
+                  ASCENDING KEY IS X1
+                  DESCENDING Y1.
+             10  X1 PIC 9(4).
+             10  Y1 PIC X.
+           05  TAB-ENTRY
+                  OCCURS 2 TIMES
+                  INDEXED BY IDX2
+                  DESCENDING KEY IS X2
+                  ASCENDING  Y2.
+             10  X2 PIC 9(4).
+             10  Y2 PIC X.
+])
+
+AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
+[prog.cob: 10: error: INDEXED should follow ASCENDING/DESCENDING
+prog.cob: 17: error: INDEXED should follow ASCENDING/DESCENDING
+])
+
+AT_CHECK([$COMPILE_ONLY -frelax-syntax-checks prog.cob], [0], [],
+[prog.cob: 10: warning: INDEXED should follow ASCENDING/DESCENDING
+prog.cob: 17: warning: INDEXED should follow ASCENDING/DESCENDING
+])
+
+AT_CLEANUP
+
+
 AT_SETUP([OCCURS size check])
 AT_KEYWORDS([occurs])
 
@@ -321,5 +360,3 @@ grep "prog.cob: 11: error: numeric literal '9223372036854775808' exceeds limit"]
 [0], ignore, [])
 
 AT_CLEANUP
-
-
